--- a/raccolta.html
+++ b/raccolta.html
@@ -440,36 +440,14 @@
     </div>
 </footer>
 
+<!-- Aggiungi lo script per lo scrolling personalizzato -->
 <script>
-document.getElementById('scrollToOrari').addEventListener('click', function(event) {
-    event.preventDefault();
-    var win = window.open('https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#where_infobib', '_blank');
-    
-    setTimeout(function() {
-        if (win && win.document) {
-            var element = win.document.querySelector('section#where_infobib');
-            if (element) {
-                var targetPosition = element.getBoundingClientRect().top + win.pageYOffset;
-                var currentPosition = -1;
-                var monitorScroll = function() {
-                    if (Math.abs(win.pageYOffset - targetPosition) > 5) {
-                        win.scrollTo({
-                            top: targetPosition,
-                            behavior: 'auto'
-                        });
-                    }
-                    requestAnimationFrame(monitorScroll); // Usa requestAnimationFrame per un controllo continuo senza sovraccaricare il browser
-                };
-                monitorScroll();  // Avvia il monitoraggio
-
-                // Opzione per fermare il monitoraggio dopo un certo tempo se necessario
-                setTimeout(function() {
-                    cancelAnimationFrame(monitorScroll);
-                }, 10000); // 10 secondi di monitoraggio
-            }
+    // Aggiungi uno script per lo scrolling solo se la pagina contiene l'ancora 'where_openings'
+    window.onload = function() {
+        if (window.location.hash === "#where_openings") {
+            window.scrollBy(0, 500);  // Scorre di 500px verso il basso per evidenziare la sezione
         }
-    }, 1000);
-});
+    };
 </script>
 
 
