--- a/index.html
+++ b/index.html
@@ -484,7 +484,9 @@ function hideError(input) {
 
 </script>
 	
-
+<script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+<script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 	
 </head>
 
