--- a/index.html
+++ b/index.html
@@ -440,10 +440,10 @@ input[type="checkbox"]:checked::before {
     clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
 }
 
-/* Updated error popup style with more vivid red */
+/* Updated error popup style */
 .error-popup {
     @apply fixed top-4 left-1/2 transform -translate-x-1/2 px-6 py-4 rounded shadow-lg;
-    background-color: #ff3333; /* More vivid red */
+    background-color: #ef4444;
     color: white;
     z-index: 50;
     animation: slideDown 0.5s ease-out;
