--- a/index.html
+++ b/index.html
@@ -684,19 +684,16 @@ document.addEventListener('DOMContentLoaded', () => {
         
 // Prima aggiungi questa funzione accanto alle altre funzioni di utility (dopo showGlobalErrorPopup)
 function showGlobalErrorPopup(message) {
-    // Remove any existing error popups first
     const existingPopups = document.querySelectorAll('.error-popup');
     existingPopups.forEach(popup => document.body.removeChild(popup));
 
-    // Create a popup div
     const popup = document.createElement('div');
-    popup.className = 'error-popup fixed top-4 left-1/2 transform -translate-x-1/2 bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded z-50 shadow-lg';
-    popup.innerHTML = `
-        <strong class="font-bold">Ops!</strong>
-        <span class="block sm:inline">${message}</span>
-    `;
+    popup.className = 'error-popup fixed top-4 left-1/2 transform -translate-x-1/2 px-6 py-4 rounded shadow-lg';
+    popup.style.backgroundColor = '#ef4444';
+    popup.style.color = 'white';
+    popup.style.zIndex = '50';
+    popup.innerHTML = message;
 
-    // Auto-remove after 5 seconds
     setTimeout(() => {
         if (document.body.contains(popup)) {
             document.body.removeChild(popup);
