--- a/termini.html
+++ b/termini.html
@@ -69,6 +69,15 @@
         </div>
     </header>
     <div class="content-wrapper">
+        <div class="nav-icons">
+            <a href="https://www.bibliotechediroma.it/opac/news/donazioni/33158" title="Indietro"><img src="left.svg" alt="Indietro" style="height: 22px; width: 22px;"></a>
+            <a href="https://www.bibliotechediroma.it/opac/.do" title="Home"><img src="home.svg" alt="Home" style="height: 22px; width: 22px;"></a>
+        </div>
+        <div class="library-name">
+            <a href="https://www.openstreetmap.org/?mlat=41.7325117&mlon=12.2718834&zoom=18" target="_blank" title="Visualizza la posizione sulla mappa"><img src="location.svg" alt="Location"></a>
+            <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" target="_blank"> Biblioteca Elsa Morante </a>
+        </div>
+        <!-- Aggiunta pulsante TTS e controllo dimensione del testo -->
         <div class="tts-widget">
             <button id="ttsButton" class="tts-button" title="Riproduci">
                 <i class="fas fa-headphones"></i>
@@ -79,12 +88,8 @@
             <li><span class="medium">a</span></li>
             <li><span class="large">a</span></li>
         </ul>
-        <div class="nav-icons">
-            <a href="https://www.bibliotechediroma.it/opac/news/donazioni/33158" title="Indietro"><img src="left.svg" alt="Indietro" style="height: 22px; width: 22px;"></a>
-            <a href="https://www.bibliotechediroma.it/opac/.do" title="Home"><img src="home.svg" alt="Home" style="height: 22px; width: 22px;"></a>
-        </div>
+        <!-- Fine aggiunte pulsante TTS e dimensione del testo -->
         <main>
-            <div class="library-name"><a href="https://www.openstreetmap.org/?mlat=41.7325117&mlon=12.2718834&zoom=18" target="_blank" title="Visualizza la posizione sulla mappa"><img src="location.svg" alt="Location"></a><a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" target="_blank"> Biblioteca Elsa Morante </a></div>
             <h1>Donazione di libri</h1>
             <section>
                 <h2>Criteri di Accettazione</h2>
