--- a/termini.html
+++ b/termini.html
@@ -25,12 +25,6 @@
         
         .content-wrapper { max-width: 900px; width: 100%; margin: 2rem auto; padding: 0 1rem; position: relative; margin-top: 60px; }
         
-        .tts-widget { text-align: center; margin-bottom: 20px; }
-        .tts-button { background-color: white; border-radius: 50%; padding: 10px; font-size: 1.5rem; border: none; cursor: pointer; transition: transform 0.3s ease; }
-        .tts-button:hover { transform: scale(1.1); }
-        .tts-button i { color: var(--primary); }
-        .tts-button:focus { outline: none; }
-
         .text-size-widget { text-align: center; margin-bottom: 20px; display: flex; gap: 15px; justify-content: center; }
         .text-size-widget li { font-size: 1.2rem; cursor: pointer; }
         .text-size-widget li.active { font-weight: bold; color: var(--primary); }
@@ -77,7 +71,7 @@
             <a href="https://www.openstreetmap.org/?mlat=41.7325117&mlon=12.2718834&zoom=18" target="_blank" title="Visualizza la posizione sulla mappa"><img src="location.svg" alt="Location"></a>
             <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" target="_blank"> Biblioteca Elsa Morante </a>
         </div>
-        <!-- Aggiunta pulsante TTS e controllo dimensione del testo -->
+        <!-- Aggiunte pulsante TTS e controllo dimensione del testo -->
         <div class="tts-widget">
             <button id="ttsButton" class="tts-button" title="Riproduci">
                 <i class="fas fa-headphones"></i>
