--- a/termini.html
+++ b/termini.html
@@ -549,15 +549,11 @@ footer i {
 
 
            
-           <div class="text-controls">
+<div class="text-controls">
     <button class="audio-control" id="audioControl" title="Ascolta il testo">
         <i class="fas fa-headphones"></i>
     </button>
-    <ul class="text-size-widget">
-        <li><span class="small active">A</span></li>
-        <li><span class="medium">A</span></li>
-        <li><span class="large">A</span></li>
-    </ul>
+    <span>Ascolta l'audio</span>
 </div>
 
            
