--- a/termini.html
+++ b/termini.html
@@ -390,12 +390,13 @@ footer i {
       
 
             
-       /* Audio control button styles */
+ /* Audio player container */
 .text-controls {
   margin: 2rem 0;
   width: 100%;
 }
 
+/* Audio control button */
 .audio-control-container {
   text-align: right;
   margin-bottom: 1rem;
@@ -426,54 +427,6 @@ footer i {
 /* Waveform container and bars */
 .waveform-container {
   width: 100%;
-  height: 50px;
-  background-color: transparent;
-  position: relative;
-  display: flex;
-  align-items: center;
-  gap: 3px;
-  padding: 0 10px;
-  margin-top: 20px;
-}
-
-.waveform-bar {
-  flex: 1;
-  min-width: 3px;
-  background-color: #e0e0e0;
-  border-radius: 2px;
-  transition: all 0.2s ease;
-}
-
-.waveform-bar.played {
-  background-color: var(--primary);
-}
-
-/* Time display */
-.time-display {
-  position: absolute;
-  bottom: -25px;
-  right: 10px;
-  font-size: 14px;
-  color: #666;
-  font-family: 'Space Grotesk', sans-serif;
-}
-
-.time-display span {
-  margin: 0 5px;
-}
-
-/* State styles */
-.reading .audio-control {
-  background-color: #e0e0e0;
-}
-
-
-      .audio-control-container {
-  margin: 20px 0;
-  text-align: center;
-}
-
-.waveform-container {
   height: 60px;
   background: #f5f5f5;
   border-radius: 8px;
@@ -486,8 +439,6 @@ footer i {
 .waveform-bar {
   width: 2px;
   background: #ddd;
-  display: inline-block;
-  margin: 0 1px;
   position: absolute;
   bottom: 10px;
   transition: background-color 0.2s;
@@ -497,26 +448,19 @@ footer i {
   background: var(--primary);
 }
 
+/* Time display */
 .time-display {
   display: flex;
   justify-content: space-between;
   padding: 5px 10px;
   font-size: 14px;
   color: #666;
+  font-family: 'Space Grotesk', sans-serif;
 }
 
-.audio-control {
-  background: var(--primary);
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 20px;
-  cursor: pointer;
-  transition: opacity 0.2s;
-}
-
-.audio-control:hover {
-  opacity: 0.9;
+/* State styles */
+.reading .audio-control {
+  background-color: #e0e0e0;
 }
    </style>
 </head>
