--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@ function validateCheckbox(checkbox) {
         <div class="mb-5">
             <label class="flex items-center gap-2 text-blue-600 font-medium mb-2">
                 <i class="fas fa-book-open text-lg"></i>
-                Ricerca Rapida Libri
+                Search & click: Cerca, seleziona e... boom: scheda autocompletata
             </label>
             <div class="flex gap-2">
                 <input type="text" 
