--- a/index.html
+++ b/index.html
@@ -929,10 +929,24 @@ function validateCheckbox(checkbox) {
  
 
         <div class="mb-5">
-            <label class="flex items-center gap-2 text-blue-600 font-medium mb-2">
-                <i class="fas fa-book-open text-lg"></i>
-                Search & click: Cerca, seleziona e... boom: scheda autocompletata
-            </label>
+           <label class="flex items-center gap-2 text-blue-600 font-medium mb-2">
+    <span class="relative group">
+        Search & click: 
+        <i class="fa-solid fa-circle-info text-gray-500 hover:text-gray-700 transition-colors text-sm"></i>
+        <div class="invisible group-hover:visible absolute left-1/2 -translate-x-1/2 bottom-full mb-2 px-3 py-2 bg-white border border-gray-200 text-gray-700 text-sm rounded-lg w-64 shadow-lg z-10">
+            <div class="absolute left-1/2 -translate-x-1/2 bottom-0 translate-y-full w-0 h-0 border-8 border-transparent border-t-white"></div>
+            <div class="absolute left-1/2 -translate-x-1/2 bottom-0 translate-y-full w-0 h-0 border-[9px] border-transparent border-t-gray-200"></div>
+            Cerca, seleziona e... boom, la scheda si autocompila.
+        </div>
+    </span>
+    <input type="text" 
+        class="quick-search w-full px-3 py-2 border-2 border-gray-300 rounded-l focus:border-blue-500 focus:outline-none text-base" 
+        placeholder="Cerca per titolo, autore o ISBN...">
+    <button type="button" 
+        class="search-btn bg-blue-500 text-white px-4 rounded-r hover:bg-blue-600 transition-colors"><i class="fas fa-search"></i></button>
+</label>
+
+
             <div class="flex gap-2">
                 <input type="text" 
                     class="quick-search w-full px-3 py-2 border-2 border-gray-300 rounded-l focus:border-blue-500 focus:outline-none text-base" 
