--- a/index.html
+++ b/index.html
@@ -934,12 +934,13 @@ function validateCheckbox(checkbox) {
     <label class="flex items-center gap-2 text-blue-600 font-medium">
         <i class="fas fa-book-open text-lg"></i>
         Search & click
+        <span class="text-gray-500 text-sm font-normal">(opzionale)</span>
     </label>
     <div class="relative group">
         <i class="fas fa-info-circle text-blue-400 hover:text-blue-600 cursor-help"></i>
-        <div class="invisible group-hover:visible absolute left-0 top-6 w-64 p-3 bg-white border border-gray-200 rounded-lg shadow-lg z-10 text-sm text-gray-700">
+        <div class="invisible group-hover:visible absolute left-0 top-6 w-72 p-3 bg-white border border-gray-200 rounded-lg shadow-lg z-10 text-sm text-gray-700">
             <div class="absolute -top-2 left-2 w-4 h-4 bg-white border-t border-l border-gray-200 transform rotate-45"></div>
-            Cerca, seleziona e... boom, la scheda si autocompila!
+            Puoi usare questa ricerca rapida per autocompilare i campi del libro oppure compilarli manualmente. Cerca, seleziona e... boom, la scheda si autocompila!
         </div>
     </div>
 </div>
