--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@ function validateCheckbox(checkbox) {
         <i class="fas fa-info-circle text-blue-400 hover:text-blue-600 cursor-help"></i>
         <div class="invisible group-hover:visible absolute left-0 top-6 w-72 p-3 bg-white border border-gray-200 rounded-lg shadow-lg z-10 text-sm text-gray-700">
             <div class="absolute -top-2 left-2 w-4 h-4 bg-white border-t border-l border-gray-200 transform rotate-45"></div>
-            Cerca, seleziona e... boom! La scheda si autocompila al volo! Se preferisci, puoi inserire i dati manualmente. 
+            Cerca, seleziona e... boom! La scheda si completa al volo! Se preferisci, puoi inserire i dati manualmente. 
         </div>
     </div>
 </div>
