--- a/termini.html
+++ b/termini.html
@@ -538,7 +538,7 @@ footer i {
         <i class="fas fa-headphones"></i>
         <i class="fas fa-play"></i>
     </button>
-    <span class="audio-label">ascolta l'audio</span>
+    <span class="audio-label">Ascolta l'audio</span>
 </div>
   
    
