--- a/termini.html
+++ b/termini.html
@@ -394,81 +394,74 @@ footer i {
 .audio-control-container {
     display: flex;
     align-items: center;
-    gap: 10px;
-    margin: 20px 0;
+    margin-bottom: 1rem;
 }
 
 .audio-control {
-    display: flex;
-    align-items: center;
     background: none;
     border: none;
+    color: var(--primary);
+    font-size: 1.5rem;
     cursor: pointer;
-    font-size: 24px;
-    color: #970a2c;
-}
-
-.audio-control:hover .fa-headphones {
-    display: none;
-}
-
-.audio-control:hover .fa-play {
-    display: inline;
-}
-
-.fa-play {
-    display: none;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
 }
 
 .audio-label {
-    color: #970a2c;
-    cursor: pointer;
+    margin-left: 0.5rem;
+    font-size: 0.9rem;
+    color: var(--primary);
 }
 
 .waveform-container {
-    display: none;
     position: relative;
-    height: 60px;
-    background: #f5f5f5;
-    border-radius: 4px;
+    width: 100%;
+    height: 50px;
+    background-color: #f5f5f5;
+    border-radius: 8px;
     padding: 10px;
-    margin: 10px 0;
+    margin-bottom: 2rem;
     cursor: pointer;
 }
 
 .waveform-bars {
     display: flex;
-    align-items: flex-end;
-    height: 40px;
-    gap: 1px;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+    gap: 2px;
 }
 
 .waveform-bar {
     flex: 1;
-    background: #ddd;
-    min-width: 2px;
-    transition: height 0.1s ease;
+    background-color: #ddd;
+    transition: height 0.2s ease, background-color 0.2s ease;
 }
 
 .waveform-bar.played {
-    background: #970a2c;
-}
-
-.time-display {
-    display: flex;
-    justify-content: space-between;
-    font-size: 12px;
-    margin-top: 5px;
+    background-color: var(--primary);
 }
 
 .progress-line {
     position: absolute;
     top: 0;
     left: 0;
-    height: 100%;
     width: 2px;
-    background: rgba(151, 10, 44, 0.5);
-    pointer-events: none;
+    height: 100%;
+    background-color: var(--primary);
+    transition: left 0.1s linear;
+}
+
+.time-display {
+    position: absolute;
+    bottom: -25px;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    font-size: 0.8rem;
+    color: var(--text);
 }
       
    </style>
