--- a/termini.html
+++ b/termini.html
@@ -716,17 +716,18 @@ function createWaveform() {
 }
 
 function updateWaveform(targetProgress) {
-    // Aggiorna il progresso di animazione in modo fluido
+    // Progresso interpolato
     animationProgress += (targetProgress - animationProgress) * 0.1;
 
     const bars = document.querySelectorAll('.waveform-bar');
     const totalBars = bars.length;
     const barsToPlay = Math.floor(animationProgress * totalBars);
 
+    // Aggiorna le barre una alla volta
     bars.forEach((bar, index) => {
-        if (index < barsToPlay) {
+        if (index < barsToPlay && !bar.classList.contains('played')) {
             bar.classList.add('played');
-        } else {
+        } else if (index >= barsToPlay && bar.classList.contains('played')) {
             bar.classList.remove('played');
         }
     });
@@ -735,11 +736,12 @@ function updateWaveform(targetProgress) {
     const progressLine = document.querySelector('.progress-line');
     progressLine.style.left = `${animationProgress * 100}%`;
 
-    // Chiedi il prossimo frame di animazione solo se necessario
-    if (animationProgress < targetProgress - 0.01 || animationProgress > targetProgress + 0.01) {
+    // Chiedi il prossimo frame se non è ancora completo
+    if (Math.abs(targetProgress - animationProgress) > 0.001) {
         requestAnimationFrame(() => updateWaveform(targetProgress));
     }
 }
+
 
 
 function setupSpeech() {
