--- a/termini.html
+++ b/termini.html
@@ -716,14 +716,13 @@ function createWaveform() {
 }
 
 function updateWaveform(targetProgress) {
-    // Progresso interpolato
-    animationProgress += (targetProgress - animationProgress) * 0.1;
+    // Interpolazione del progresso per rendere l'aggiornamento fluido
+    animationProgress += (targetProgress - animationProgress) * 0.05;
 
     const bars = document.querySelectorAll('.waveform-bar');
     const totalBars = bars.length;
     const barsToPlay = Math.floor(animationProgress * totalBars);
 
-    // Aggiorna le barre una alla volta
     bars.forEach((bar, index) => {
         if (index < barsToPlay && !bar.classList.contains('played')) {
             bar.classList.add('played');
@@ -732,15 +731,16 @@ function updateWaveform(targetProgress) {
         }
     });
 
-    // Aggiorna la posizione della linea di progresso
+    // Aggiorna la linea di progresso
     const progressLine = document.querySelector('.progress-line');
     progressLine.style.left = `${animationProgress * 100}%`;
 
-    // Chiedi il prossimo frame se non è ancora completo
+    // Continuiamo l'animazione solo se il progresso non è completo
     if (Math.abs(targetProgress - animationProgress) > 0.001) {
         requestAnimationFrame(() => updateWaveform(targetProgress));
     }
 }
+
 
 
 
