--- a/termini.html
+++ b/termini.html
@@ -394,81 +394,69 @@ footer i {
 .audio-control-container {
     display: flex;
     align-items: center;
-    gap: 10px;
-    margin: 20px 0;
+    gap: 1rem;
+    margin-bottom: 1rem;
 }
 
 .audio-control {
-    display: flex;
-    align-items: center;
     background: none;
     border: none;
     cursor: pointer;
-    font-size: 24px;
-    color: #970a2c;
-}
-
-.audio-control:hover .fa-headphones {
-    display: none;
-}
-
-.audio-control:hover .fa-play {
-    display: inline;
-}
-
-.fa-play {
-    display: none;
-}
-
-.audio-label {
-    color: #970a2c;
-    cursor: pointer;
+    color: var(--primary);
+    font-size: 1.5rem;
+    padding: 0.5rem;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
 }
 
 .waveform-container {
-    display: none;
     position: relative;
+    width: 100%;
     height: 60px;
-    background: #f5f5f5;
-    border-radius: 4px;
+    background-color: #f5f5f5;
+    border-radius: 8px;
     padding: 10px;
-    margin: 10px 0;
     cursor: pointer;
+    margin-bottom: 2rem;
 }
 
 .waveform-bars {
     display: flex;
-    align-items: flex-end;
-    height: 40px;
-    gap: 1px;
+    align-items: center;
+    gap: 2px;
+    height: 100%;
+    padding: 0 10px;
 }
 
 .waveform-bar {
     flex: 1;
-    background: #ddd;
+    background-color: #ddd;
     min-width: 2px;
-    transition: height 0.1s ease;
+    transition: background-color 0.3s ease;
 }
 
 .waveform-bar.played {
-    background: #970a2c;
-}
-
-.time-display {
-    display: flex;
-    justify-content: space-between;
-    font-size: 12px;
-    margin-top: 5px;
+    background-color: var(--primary);
 }
 
 .progress-line {
     position: absolute;
     top: 0;
-    left: 0;
-    height: 100%;
     width: 2px;
-    background: rgba(151, 10, 44, 0.5);
-    pointer-events: none;
+    height: 100%;
+    background-color: var(--primary);
+    transition: left 0.1s linear;
+}
+
+.time-display {
+    position: absolute;
+    bottom: -25px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    font-size: 0.8rem;
+    color: #666;
 }
       
    </style>
@@ -533,14 +521,22 @@ footer i {
            
 <!-- Add this right after the library-name div in your HTML -->
 <div class="text-controls">
-<div class="audio-control-container">
-    <button class="audio-control" id="audioControl">
-        <i class="fas fa-headphones"></i>
-        <i class="fas fa-play"></i>
-    </button>
-    <span class="audio-label">ascolta l'audio</span>
+    <div class="audio-control-container">
+        <button class="audio-control" id="audioControl">
+            <i class="fas fa-headphones"></i>
+            <i class="fas fa-play"></i>
+        </button>
+        <span class="audio-label">ascolta l'audio</span>
+    </div>
+    <div class="waveform-container">
+        <div class="waveform-bars"></div>
+        <div class="progress-line"></div>
+        <div class="time-display">
+            <span id="currentTime">0:00</span>
+            <span id="totalTime">0:00</span>
+        </div>
+    </div>
 </div>
-  
    
 <div class="waveform-container">
     <div class="waveform-bars"></div>
